# modelity

./: .bumpify.toml  .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  tasks.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
docs/source/: about.rst  advanced.rst  conf.py  glossary.rst  guide.rst  index.rst  old.guide.rst  quickstart.rst  requirements.txt  tutorial.rst  types.rst
modelity/: _export_list.py  _hooks.py  _utils.py  api.py  base.py  constraints.py  decorators.py  error.py  exc.py  field.py  helpers.py  hooks.py  interface.py  invalid.py  loc.py  mixins.py  model.py  providers.py  types.py  typing.py  undefined.py  unset.py  validators.py  visitors.py
modelity/_compat/: dataclasses.py
modelity/_internal/: hooks.py  model.py  registry.py  utils.py
modelity/_parsing/: facade.py  type_handler_factory.py  type_proxies.py
modelity/_type_descriptors/: any.py  collections.py  ipaddr.py  main.py  model.py  simple.py  special.py  union.py
modelity/parsing/: _proxies.py  annotated.py  collections.py  facade.py  factory.py  interface.py  main.py  providers.py  registry.py  simple.py  types.py  union.py
modelity/type_descriptors/: annotated.py  any.py  collections.py  main.py  model.py  simple.py  union.py
scripts/: generate_api_docs.py
tests/: conftest.py  helpers.py
tests/examples/: test_jsonrpc.py  test_ordering_system.py
tests/functional/: test_model.py  test_parsing.py  test_type_descriptors.py  test_type_handlers.py  test_types.py
tests/unit/: conftest.py  (+14 more)
(+130 files in other folders)
