[tool.poetry]
name = "modelity"
version = "0.0.1"
description = "Data parsing and validation library for Python projects"
authors = ["Maciej Wiatrzyk <maciej.wiatrzyk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
invoke = "^2.2.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
